Validate CDI injection point resolution